--- a/Deposito/src/app/pages/frm-abm/abm-detalle-compra/abm-detalle-compra.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-detalle-compra/abm-detalle-compra.component.html
@@ -106,7 +106,7 @@
                     <label for="">Agregue cantidad de compra</label>
                     <input
                       class="form-control"
-                      type="text"
+                      type="number"
                       oninvalid="setCustomValidity('El campo es obligatorio')"
                       oninput="setCustomValidity('')"
                       minlength="1"
@@ -146,7 +146,7 @@
                   <td>
                     <input
                       class="text-center"
-                      type="text"
+                      type="number"
                       id="cantidad"
                       name="cantidad"
                       [(ngModel)]="i.cantidad_compra"
@@ -190,16 +190,56 @@
                       <i class="fas fa-edit"></i>
                     </button>
                     &nbsp;
-                    <button
-                      type="button"
-                      title="Eliminar"
-                      placement="top"
-                      show-delay="10"
-                      (click)="eliminar(i)"
-                      class="btn btn-danger btn-sm btn-redondo"
-                    >
-                      <i class="fas fa-calendar-times"></i>
-                    </button>
+
+                    <ng-container
+                      *ngIf="item.id; then thenTemplate; else elseTemplate"
+                    ></ng-container>
+                    <ng-template #thenTemplate>
+                      <button
+                        type="button"
+                        title="Eliminar"
+                        placement="top"
+                        show-delay="10"
+                        (click)="preDelete(item)"
+                        class="btn btn-warning btn-sm btn-redondo"
+                      >
+                        <i class="fas fa-calendar-times"></i>
+                      </button>
+                      &nbsp;
+                      <button
+                        type="button"
+                        title="Eliminar"
+                        placement="top"
+                        show-delay="10"
+                        (click)="modificar(item)"
+                        class="btn btn-warning btn-sm btn-redondo"
+                      >
+                        <i class="fas fa-calendar-times"></i>
+                      </button>
+                    </ng-template>
+                    <ng-template #elseTemplate>
+                      <button
+                        type="button"
+                        title="Eliminar"
+                        placement="top"
+                        show-delay="10"
+                        (click)="eliminar(i)"
+                        class="btn btn-danger btn-sm btn-redondo"
+                      >
+                        <i class="fas fa-calendar-times"></i>
+                      </button>
+                      &nbsp;
+                      <button
+                        type="button"
+                        title="Modificar"
+                        placement="top"
+                        show-delay="10"
+                        (click)="modificar(i)"
+                        class="btn btn-success btn-sm btn-redondo"
+                      >
+                        <i class="fas fa-edit"></i>
+                      </button>
+                    </ng-template>
                   </td>
                 </ng-template>
               </tr>
@@ -210,7 +250,8 @@
       <hr />
       <div class="form-group">
         <button
-          type="submit"
+          (click)="doAction()"
+          type="button"
           [disabled]="procesando"
           name="btn"
           class="btn btn-primary btn-lg btn-block float-left"
